<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="@color/grey_400"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <RelativeLayout
        android:id="@+id/play"
        android:layout_below="@+id/shimmer_view_container"
        android:background="@color/black"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:focusable="true">


        <FrameLayout
            android:id="@+id/player_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/img_full_scr"
                app:srcCompat="@drawable/ic_full"
                android:layout_gravity="end|bottom"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="42dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

            <com.google.android.exoplayer2.ui.SubtitleView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>
        <WebView
            android:id="@+id/webView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </WebView>
        <ImageView
            android:id="@+id/img_back"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_action_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_outline_play_circle_filled_24px"
            android:layout_width="50dp"
            android:layout_height="50dp" />


    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_below="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.core.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/llbottomparent"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_server_list"
                        android:layout_width="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_download_list"
                        android:layout_width="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                    <com.google.android.gms.ads.AdView
                        xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/adView"
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/admob_ad_id">
                    </com.google.android.gms.ads.AdView>

                    <RelativeLayout
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/text_name"
                            android:layout_toLeftOf="@+id/add_fav"
                            android:textAppearance="@style/TextAppearance.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/add_fav" />

                        <ImageView
                            android:id="@+id/add_fav"
                            android:visibility="gone"
                            android:layout_alignParentRight="true"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            app:srcCompat="@drawable/outline_favorite_border_24"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/llbottom"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/director"
                                android:textColor="@color/black"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:text="@string/director"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/tv_director"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@id/director"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/director"
                                android:layout_marginStart="10dp" />
                            <androidx.recyclerview.widget.RecyclerView
                                android:visibility="gone"
                                android:layout_toRightOf="@id/director"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/director">

                            </androidx.recyclerview.widget.RecyclerView>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_release_date"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                        <View
                            android:layout_marginTop="5dp"
                            android:background="@color/grey_20"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>
                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:text="@string/genre"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/tv_genre"
                                android:textAppearance="@style/TextAppearance.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />


                        </LinearLayout>

                        <View
                            android:layout_marginTop="5dp"
                            android:background="@color/grey_20"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:text="@string/cast_n_crew"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/tv_cast"
                                android:textAppearance="@style/TextAppearance.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>


                    </LinearLayout>
                    <View
                        android:layout_marginTop="5dp"
                        android:background="@color/grey_20"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:padding="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@color/black"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.Medium.Bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tv_details"
                            android:textAppearance="@style/TextAppearance.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_related"
                        android:textAppearance="@style/TextAppearance.Title"
                        android:padding="10dp"
                        android:text="@string/related_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_related"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llcomments"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/comments"
                        android:textAppearance="@style/TextAppearance.Medium.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/et_comment"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/comment_et_border"
                        android:padding="10dp"
                        android:hint="@string/your_comments"
                        android:layout_width="match_parent"
                        android:layout_height="70dp" />
                    <Button
                        android:id="@+id/btn_comment"
                        android:layout_gravity="right"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/add_comments"
                        android:textAllCaps="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!--<LinearLayout-->
        <!--android:layout_below="@+id/swipe_layout"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:text="Comments:"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<EditText-->
            <!--android:id="@+id/et_comment"-->
            <!--android:padding="5dp"-->
            <!--android:hint="your comment.."-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="70dp" />-->
        <!--<Button-->
            <!--android:id="@+id/btn_comment"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:text="Add"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/recyclerView_comment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

        <!--</android.support.v7.widget.RecyclerView>-->

    <!--</LinearLayout>-->


</RelativeLayout>